# lychd

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .python-version  404.html  AGENTS.md  CONTRIBUTING.md  Containerfile  DRIFT.md  LICENSE  Makefile  README.md  index.html  mkdocs.yaml  package-lock.json  package.json  pyproject.toml  spindle.nix  tailwind.config.cjs  vite.config.js  zensical.toml
.github/workflows/: build.yml  docs.yml
.tangled/workflows/: docs.yml
adr/: index.html
adr/00-license/: index.html
adr/01-doctrine/: index.html
adr/02-documentation/: index.html
adr/03-quality/: index.html
adr/04-testing/: index.html
adr/05-extensions/: index.html
adr/06-persistence/: index.html
adr/07-snapshots/: index.html
adr/08-containers/: index.html
adr/09-security/: index.html
adr/10-privilege/: index.html
adr/11-backend/: index.html
adr/12-configuration/: index.html
adr/13-layout/: index.html
adr/14-workers/: index.html
adr/15-frontend/: index.html
adr/16-creation/: index.html
adr/17-packaging/: index.html
adr/18-cli/: index.html
adr/18-evolution/: index.html
adr/19-agents/: index.html
adr/19-cli/: index.html
adr/20-agents/: index.html
adr/20-dispatcher/: index.html
adr/21-context/: index.html
adr/21-orchestrator/: index.html
adr/22-dispatcher/: index.html
adr/22-graph/: index.html
adr/23-a2a/: index.html
adr/23-orchestrator/: index.html
adr/24-graph/: index.html
adr/24-memory/: index.html
adr/25-hitl/: index.html
adr/26-a2a/: index.html
adr/26-context/: index.html
adr/27-assimilation/: index.html
adr/27-memory/: index.html
adr/28-observability/: index.html
adr/28-workflow/: index.html
adr/29-observability/: index.html
adr/29-training/: index.html
adr/30-proxy/: index.html
adr/30-webcrawler/: index.html
adr/31-simulation/: index.html
adr/31-vpn/: index.html
adr/32-audio/: index.html
adr/32-identity/: index.html
adr/33-training/: index.html
adr/33-vision/: index.html
adr/34-evaluation/: index.html
adr/34-identity/: index.html
adr/35-assimilation/: index.html
adr/35-simulation/: index.html
adr/36-vision/: index.html
adr/37-audio/: index.html
adr/38-iam/: index.html
adr/39-vpn/: index.html
adr/40-proxy/: index.html
adr/41-x402/: index.html
adr/42-legion/: index.html
divination/: index.html
divination/altar/: index.html
divination/metrics/: index.html
divination/transcendence/: index.html
divination/transcendence/illumination/: index.html
divination/transcendence/immortality/: index.html
divination/transcendence/incantation/: index.html
divination/transcendence/invocation/: index.html
docs/: .pages  index.md  lexicon.md  summoning.md
docs/adr/: 00-license-agplv3.md  00-license.md  01-doctrine.md  01-xddd.md  02-documentation-engine.md  02-documentation.md  03-code-quality.md  03-quality.md  04-testing-strategy.md  04-testing.md  05-extensions.md  05-podman-quadlets.md  06-persistence.md  06-rootless-security.md  07-privilege-escalation.md  07-snapshots.md  08-btrfs-snapshots.md  08-containers.md  09-configuration-bootstrapping.md  09-security.md  10-litestar-framework.md  10-privilege.md  11-backend.md  11-htmx-server-rendering.md  12-cli-interface.md  12-configuration.md  13-layout.md  13-unified-postgres-backend.md  14-llm-interface.md  14-workers.md  15-frontend.md  15-pydantic-ai-framework.md  16-creation.md  16-observability-stack.md  17-extension-architecture.md  17-packaging.md  18-cli.md  18-evolution.md  18-spheres-of-creation.md  19-agents.md  (+41 more)
docs/divination/: altar.md  index.md  metrics.md
docs/divination/transcendence/: .pages  illumination.md  immortality.md  incantation.md  index.md  invocation.md
docs/overrides/stylesheets/: frostmourne.css
docs/sepulcher/: .pages  codex.md  crypt.md  index.md  intents.md  lich.md  oculus.md  runes.md
docs/sepulcher/animator/: index.md  portal.md  runtime-plan.md  soulstone.md
docs/sepulcher/extensions/: .pages  anatomy.md  echo.md  index.md  legion.md  mirror.md  oculus.md  paradox.md  prism.md  riddle.md  scout.md  shadow.md  smith.md  soulforge.md  tether.md  toll.md  veil.md  ward.md  weaver.md
docs/sepulcher/phylactery/: index.md  reanimation.md  soulforge.md
docs/sepulcher/vessel/: ghouls.md  index.md  shadow_realm.md
docs/sepulcher/watchers/: harvester.md  index.md  oracle.md  scribe.md
lexicon/: index.html
resources/: main.js
scripts/: refctx.py
search/: search_index.json
sepulcher/: index.html
sepulcher/animator/: index.html
sepulcher/animator/portal/: index.html
sepulcher/animator/soulstone/: index.html
sepulcher/codex/: index.html
sepulcher/crypt/: index.html
sepulcher/extensions/: index.html
sepulcher/extensions/anatomy/: index.html
sepulcher/extensions/echo/: index.html
sepulcher/extensions/legion/: index.html
sepulcher/extensions/mirror/: index.html
sepulcher/extensions/oculus/: index.html
sepulcher/extensions/paradox/: index.html
sepulcher/extensions/prism/: index.html
sepulcher/extensions/riddle/: index.html
sepulcher/extensions/scout/: index.html
sepulcher/extensions/shadow/: index.html
sepulcher/extensions/smith/: index.html
sepulcher/extensions/soulforge/: index.html
sepulcher/extensions/tether/: index.html
sepulcher/extensions/toll/: index.html
sepulcher/extensions/veil/: index.html
sepulcher/extensions/ward/: index.html
sepulcher/extensions/weaver/: index.html
sepulcher/intents/: index.html
sepulcher/lich/: index.html
sepulcher/phylactery/: index.html
sepulcher/phylactery/reanimation/: index.html
sepulcher/phylactery/soulforge/: index.html
sepulcher/runes/: index.html
sepulcher/vessel/: index.html
sepulcher/vessel/ghouls/: index.html
sepulcher/vessel/shadow_realm/: index.html
sepulcher/watchers/: index.html
sepulcher/watchers/harvester/: index.html
sepulcher/watchers/oracle/: index.html
sepulcher/watchers/scribe/: index.html
src/lychd/: __main__.py  app.py
src/lychd/agents/: __init__.py
summoning/: index.html
tests/: conftest.py
tests/e2e/: test_cli.py
(+102 files in other folders)
