[project]
name = "lychd"
dynamic = ["version"]
description = "Systemd-native daemon for local agentic orchestration"
readme = "README.md"
authors = [
    { name = "The Hexanomicon", email = "hexanomicon@proton.me" }
]
requires-python = ">=3.12, <3.14"
license = { text = "MIT" }
keywords = ["systemd", "agentic", "llm", "daemon", "litestar", "pydantic-ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: No Input/Output (Daemon)",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Pydantic",
    "Typing :: Typed",
]


dependencies = [
    "jinja2>=3.1.6",
    "pydantic-settings[toml]>=2.10.1",
    "litestar>=2.18.0",
]

[project.urls]
Homepage = "https://github.com/hexanomicon/lychd"
Issues = "https://github.com/hexanomicon/lychd/issues"

[dependency-groups]
server = [
    "litestar[sqlalchemy,structlog,jinja,pydantic]>=2.18.0",
    "litestar-granian>=0.14.2",
    "litestar-vite",
    "litestar-saq[psycopg]>=0.5.3",
    "pydantic-ai-slim[openai, logfire]>=1.25.1",
    "asyncpg>=0.29.0",
]
docs = [
    "mkdocs-material>=9.7.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov",
]
lint = [
    "ruff>=0.1.0",
]

typing = [
    "basedpyright>=1.1.0"
]

dev = [
    { include-group = "server" },
    { include-group = "docs" },
    { include-group = "test" },
    { include-group = "lint" },
    # no typing or we get errors with pyright stub
]



[project.scripts]
lychd = "lychd.__main__:run_cli"

[tool.hatch.version]
path = "src/lychd/__about__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lychd"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--maxfail=10 -l -v"
log_cli = "True"
testpaths = ["tests"]
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s %(message)s"
log_cli_level = "INFO"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.codespell]
ignore-words-list = "tread,wither"

[tool.ruff.lint]
select = ["ALL"]  # Zapne VŠETKY pravidlá

# Tu explicitne vypneš len tie, ktoré sú otravné alebo riešené inak
ignore = [
    "E501",    # Line length done by formatter
    "D",       # Missing docstrings
    "ANN",     # Missing annotations
    "FIX002",  # TODO comments
    "PLC0415"  # Allow imports in functions
]

[tool.ruff.lint.isort]
known-first-party = ["lychd", "tests"] # tell isortu, these are our modules

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # in tests allow `assert`
"src/lychd/__init__.py" = ["F401"] # In __init__ allow unused imports

[tool.ruff.format]
quote-style = "double"


[tool.pyright]
# This enforces the strictness you were seeing before
reportMissingImports = true
reportMissingTypeStubs = false # Often noisy for libs without stubs
reportGeneralTypeIssues = true
reportPrivateUsage = true

# Sets the strictness level to catch everything
typeCheckingMode = "strict"

# Tell pyright where your source code is
include = ["src"]


[tool.coverage.report]
exclude_lines = [
  'if TYPE_CHECKING:',
  'pragma: no cover',
  "if __name__ == .__main__.:",
  'def __repr__',
  'raise NotImplementedError',
  'if 0:',
  'class .*\bProtocol\):',
  '@(abc\.)?abstractmethod',
]
